fixed text wrap

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -181,6 +181,13 @@ td {
     margin-bottom: 70px;
 }
 
+.messageP {
+    width: 500px;
+    overflow: auto;
+}
+
+
+
 .floatright {
     float: right;
 }
